--- a/How many Australian Open players need photos in Wikipedia?.ipynb
+++ b/How many Australian Open players need photos in Wikipedia?.ipynb
@@ -45,11 +45,12 @@
    "metadata": {},
    "source": [
     "# sampleplayers.txt\n",
+    "\n",
     "Baghdatis, Marcos\n",
     "Bai, Yan\n",
     "Baker, Brian\n",
     "Barrere, Gregoire\n",
-    "Basic, Mirza"
+    "Basic, Mirza\n"
    ]
   },
   {
@@ -738,9 +739,15 @@
    "metadata": {},
    "source": [
     "(aomp)blaugher@scorpion:~/workspace/aomp$ python script.py \n",
-    "..................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................\n",
+    "...............................................................................................\n",
+    "...............................................................................................\n",
+    "...............................................................................................\n",
+    "...............................................................................................\n",
+    "...............................................................................................\n",
+    ".......................................................................\n",
     "Has image: 473\n",
     "See disambigs.txt, needspage.txt and needsimage.txt for further work!\n",
+    "\n",
     "(aomp)blaugher@scorpion:~/workspace/aomp$ wc -l *txt\n",
     "   25 disambigs.txt\n",
     "   30 needsimage.txt\n",
@@ -752,13 +759,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Overall quite impressive -- only around 5% of the players at the Australian Open don't have a Wikipedia article, and only another 3% or so need images. (Give or take resolving the name disambiguations and doing a bit more manual verifying that the results seem reasonable.) \n",
+    "Overall quite impressive -- only around 5% of the players at the 2016 Australian Open don't have a Wikipedia article, and only another 3% or so need images. (Give or take resolving the name disambiguations and doing a bit more manual verifying that the results seem reasonable.) \n",
     "\n",
     "That leaves some todos:\n",
     "   - Encourage people to [start articles](https://github.com/pfctdayelise/aomp/blob/master/needspage.txt) for the missing players\n",
     "   - Try to resolve [disambiguation pages](https://github.com/pfctdayelise/aomp/blob/master/disambigs.txt) - look for a link on a line that mentions tennis, or even just tennis in the link name\n",
     "   - For [missing photos](https://github.com/pfctdayelise/aomp/blob/master/needsimage.txt), check interwiki links (articles on the same topic in other languages) and see if any of them have images.\n",
-    "   - Put together my tennis schedule - seems like I will have a lot of time to enjoy the tennis for itself and not have to worry about photo ops! 🎾🎾🎾🎾🎾"
+    "   - Put together my tennis schedule - seems like I will have a lot of time to enjoy the tennis for itself and not have to worry about photo ops! 🎾🎾🎾🎾🎾\n",
+    "\n",
+    "_Written by [Brianna Laugher](http://brianna.laugher.id.au) ([@pfctdayelise](https://twitter.com/pfctdayelise)), code is available on [github](https://github.com/pfctdayelise/aomp)._"
    ]
   }
  ],
