try wrapping raw cell in pre tags

--- a/How many Australian Open players need photos in Wikipedia?.ipynb
+++ b/How many Australian Open players need photos in Wikipedia?.ipynb
@@ -44,13 +44,15 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
+    "<pre>\n",
     "# sampleplayers.txt\n",
     "\n",
     "Baghdatis, Marcos\n",
     "Bai, Yan\n",
     "Baker, Brian\n",
     "Barrere, Gregoire\n",
-    "Basic, Mirza\n"
+    "Basic, Mirza\n",
+    "</pre>\n",
    ]
   },
   {
