try four leading spaces

--- a/How many Australian Open players need photos in Wikipedia?.ipynb
+++ b/How many Australian Open players need photos in Wikipedia?.ipynb
@@ -44,15 +44,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```\n",
-    "# sampleplayers.txt\n",
-    "\n",
-    "Baghdatis, Marcos\n",
-    "Bai, Yan\n",
-    "Baker, Brian\n",
-    "Barrere, Gregoire\n",
-    "Basic, Mirza\n",
-    "```\n",
+    "    # sampleplayers.txt\n",
+    "    \n",
+    "    Baghdatis, Marcos\n",
+    "    Bai, Yan\n",
+    "    Baker, Brian\n",
+    "    Barrere, Gregoire\n",
+    "    Basic, Mirza\n"
    ]
   },
   {
