Add custom css to distinguish results more clearly, rerun all cells

--- a/How many Australian Open players need photos in Wikipedia?.ipynb
+++ b/How many Australian Open players need photos in Wikipedia?.ipynb
@@ -1,6 +1,43 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       "\n",
+       "\n",
+       ".rendered_html pre {\n",
+       "    border: 1px solid #CFCFCF;\n",
+       "}\n",
+       "div.output_text {\n",
+       "    background-color: #CFCFCF;\n",
+       "}\n",
+       "\n",
+       "</style>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from IPython.core.display import HTML\n",
+    "css_file = './custom.css'\n",
+    "HTML(open(css_file, \"r\").read())"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -55,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -111,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -156,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -218,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -230,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -272,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -283,7 +320,7 @@
        "'Mirza Bašić'"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -314,7 +351,7 @@
        "False"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -390,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -446,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -455,9 +492,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Category:All disambiguation pages\n",
+      "Category:Human name disambiguation pages\n",
       "Category:All article disambiguation pages\n",
-      "Category:Human name disambiguation pages\n"
+      "Category:All disambiguation pages\n"
      ]
     }
    ],
@@ -486,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -522,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -578,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -588,25 +625,25 @@
      "output_type": "stream",
      "text": [
       "File:Flag of Finland.svg\n",
+      "File:Flag of Chile.svg\n",
       "File:Ambox important.svg\n",
+      "File:Flag of Argentina.svg\n",
+      "File:Commons-logo.svg\n",
+      "File:Flag of Croatia.svg\n",
+      "File:Flag of Belgium (civil).svg\n",
       "File:Baghdatis 2009 Delray 1.jpg\n",
       "File:Flag of France.svg\n",
-      "File:Flag of Croatia.svg\n",
-      "File:Flag of Argentina.svg\n",
-      "File:Flag of Belgium (civil).svg\n",
       "File:Flag of Cyprus.svg\n",
-      "File:Commons-logo.svg\n",
-      "File:Flag of Chile.svg\n",
-      "File:Flag of Russia.svg\n",
       "File:Marcos Baghdatis Serve.JPG\n",
+      "File:Marcos Baghdatis2007USOPEN.jpg\n",
       "File:Flag of Serbia.svg\n",
-      "File:Flag of Switzerland.svg\n",
-      "File:Flag of the United States.svg\n",
-      "File:Marcos Baghdatis 2004 US Open.JPG\n",
       "File:Flag of Thailand.svg\n",
+      "File:Marcos Baghdatis 2004 US Open.JPG\n",
+      "File:Flag of the United States.svg\n",
       "File:Flag of the Czech Republic.svg\n",
+      "File:Flag of Switzerland.svg\n",
       "File:Marcos Baghdatis Olympics 2012.jpg\n",
-      "File:Marcos Baghdatis2007USOPEN.jpg\n"
+      "File:Flag of Russia.svg\n"
      ]
     }
    ],
@@ -632,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -675,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
