add thanks to pyladies

--- a/How many Australian Open players need photos in Wikipedia?.ipynb
+++ b/How many Australian Open players need photos in Wikipedia?.ipynb
@@ -804,7 +804,7 @@
     "   - For [missing photos](https://github.com/pfctdayelise/aomp/blob/master/needsimage.txt), check interwiki links (articles on the same topic in other languages) and see if any of them have images.\n",
     "   - Put together my tennis schedule - seems like I will have a lot of time to enjoy the tennis for itself and not have to worry about photo ops! 🎾🎾🎾🎾🎾\n",
     "\n",
-    "_Written by [Brianna Laugher](http://brianna.laugher.id.au) ([@pfctdayelise](https://twitter.com/pfctdayelise)), code is available on [github](https://github.com/pfctdayelise/aomp)._"
+    "_Written by [Brianna Laugher](http://brianna.laugher.id.au) ([@pfctdayelise](https://twitter.com/pfctdayelise)), code is available on [github](https://github.com/pfctdayelise/aomp). Thanks to folks in the PyLadies [Slack](http://slackin.pyladies.com/)/[IRC](http://www.pyladies.com/blog/irc-resources/) for feedback._"
    ]
   }
  ],
