move custom.css into blog dir

--- a/How many Australian Open players need photos in Wikipedia?.ipynb
+++ b/How many Australian Open players need photos in Wikipedia?.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -26,14 +26,14 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from IPython.core.display import HTML\n",
-    "css_file = './custom.css'\n",
+    "css_file = 'blog/custom.css'\n",
     "HTML(open(css_file, \"r\").read())"
    ]
   },
